@@ -169,7 +169,7 @@ export const TECH_PRESTIGE_MULTI = 0.5;
 export const DISTRICT_PRESTIGE_MULTI = 0.5;
 export const MATERIAL_PRESTIGE_MULTI = 5;
 export const COMPONENT_PRESTIGE_MULTI = 0.3;
-export const VELOCITY_PRESTIGE_MULTI = 0.15;
+export const VELOCITY_PRESTIGE_MULTI = 0.12;
 export const MORE_UP_PRESTIGE = 1;
 export const SIX_HOURS = 3600 * 6;
 export const BETTER_SPACE_STATION_PRESTIGE = 0.2;
