@@ -4,6 +4,7 @@ import { BonusStack } from "../bonus/bonusStack";
 export abstract class ITechnologyData implements IJobType {
   id: string;
   name: string;
+  description?: string;
   icon: string;
   color?: string;
   darkColor: string;
@@ -20,7 +21,9 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:upgrade",
     darkColor: "#D4380D",
     lightColor: "#D4380D",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description:
+      "Increase ships build speed, increase max level for a lot of ship modules."
   },
   CivilEngineering: {
     id: "i",
@@ -28,7 +31,9 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "fa-s:cog",
     darkColor: "#FA8C16",
     lightColor: "#FA8C16",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description:
+      "Increase space stations, megastructures and infrastructure build speed. Increase level of non combat ship modules."
   },
   Physics: {
     id: "p",
@@ -36,7 +41,8 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "fa-s:atom",
     darkColor: "#5298E4",
     lightColor: "#096DD9",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description: "Increase max level for some ship modules."
   },
   Materials: {
     id: "m",
@@ -44,7 +50,8 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:cube",
     darkColor: "#5cdbd3",
     lightColor: "#08979c",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description: "Increase max mods for metallurgists and armour modules level."
   },
   Propulsion: {
     id: "o",
@@ -52,7 +59,8 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:rocket-thruster",
     darkColor: "#FA8C16",
     lightColor: "#FA8C16",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description: "Increase max level of propulsion weapons and thrusters"
   },
   Computing: {
     id: "c",
@@ -60,7 +68,8 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:computing",
     darkColor: "#ffffff",
     lightColor: "#000000",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description: "Increase computing /s by 1%"
   },
   Robotics: {
     id: "R",
@@ -68,7 +77,8 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:vintage-robot",
     darkColor: "#F2F6FF",
     lightColor: "#354266",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description: "Increase max drones mods."
   },
   Naval: {
     id: "n",
@@ -76,7 +86,9 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:medal",
     darkColor: "#b37feb",
     lightColor: "#722ed1",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description:
+      "Increase max naval capacity. Each tech. point translates to one naval cap point."
   },
   Search: {
     id: "r",
@@ -84,7 +96,9 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:radar-sweep",
     darkColor: "#7CB305",
     lightColor: "#7CB305",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description:
+      "Increase max searcher mod points. Increase search speed by 5%."
   },
   Energy: {
     id: "t",
@@ -92,7 +106,9 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:electric",
     darkColor: "#FADB14",
     lightColor: "#FADB14",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description:
+      "Increase maximum technician's mod points and ships generators levels."
   },
   Mining: {
     id: "l",
@@ -100,6 +116,7 @@ export const TECHNOLOGIES: { readonly [index: string]: ITechnologyData } = {
     icon: "my:mining",
     darkColor: "#D4380D",
     lightColor: "#D4380D",
-    price: new Decimal(1e3)
+    price: new Decimal(1e3),
+    description: "Increase miner's mod points."
   }
 };
