@@ -9,3 +9,9 @@
 ::ng-deep .ant-card-small > .ant-card-body {
   padding-bottom: 8px;
 }
+.info-icon {
+  float: right;
+}
+.desc-popover {
+  max-width: 25rem;
+}
