@@ -1,6 +1,8 @@
 4/10/2020
 -   Infrastructure bonus stack additive
 -   Added "Stats" page
+-   Added technology info
+-   Reduced "More velocity and acceleration" exp shop bonus from 15% to 12%
 
 3/10/2020
 -   New challenge: Expanding Universe
